--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -23699,6 +23699,77 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.RewardFlavour
   nameWithType: QuestMalfurionAwakens.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase
+  name: QuestRiseBase
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html
+  commentId: T:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase
+  nameWithType: QuestRiseBase
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.#ctor(Rectangle)
+  name: QuestRiseBase(Rectangle)
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html#WarcraftLegacies_Source_Quests_Druids_QuestRiseBase__ctor_Rectangle_
+  commentId: M:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.#ctor(Rectangle)
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.QuestRiseBase(Rectangle)
+  nameWithType: QuestRiseBase.QuestRiseBase(Rectangle)
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.#ctor*
+  name: QuestRiseBase
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html#WarcraftLegacies_Source_Quests_Druids_QuestRiseBase__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.QuestRiseBase
+  nameWithType: QuestRiseBase.QuestRiseBase
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html#WarcraftLegacies_Source_Quests_Druids_QuestRiseBase_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestRiseBase.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html#WarcraftLegacies_Source_Quests_Druids_QuestRiseBase_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnComplete
+  nameWithType: QuestRiseBase.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnFail(MacroTools.FactionSystem.Faction)
+  name: OnFail(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html#WarcraftLegacies_Source_Quests_Druids_QuestRiseBase_OnFail_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnFail(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnFail(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestRiseBase.OnFail(Faction)
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnFail*
+  name: OnFail
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html#WarcraftLegacies_Source_Quests_Druids_QuestRiseBase_OnFail_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnFail
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.OnFail
+  nameWithType: QuestRiseBase.OnFail
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html#WarcraftLegacies_Source_Quests_Druids_QuestRiseBase_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardDescription
+  nameWithType: QuestRiseBase.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html#WarcraftLegacies_Source_Quests_Druids_QuestRiseBase_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardDescription
+  nameWithType: QuestRiseBase.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html#WarcraftLegacies_Source_Quests_Druids_QuestRiseBase_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardFlavour
+  nameWithType: QuestRiseBase.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.html#WarcraftLegacies_Source_Quests_Druids_QuestRiseBase_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestRiseBase.RewardFlavour
+  nameWithType: QuestRiseBase.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.Druids.QuestShaladrassil
   name: QuestShaladrassil
   href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShaladrassil.html
@@ -23757,6 +23828,77 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Druids.QuestShaladrassil.RewardFlavour
   nameWithType: QuestShaladrassil.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase
+  name: QuestShrineBase
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html
+  commentId: T:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase
+  nameWithType: QuestShrineBase
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.#ctor(Rectangle)
+  name: QuestShrineBase(Rectangle)
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html#WarcraftLegacies_Source_Quests_Druids_QuestShrineBase__ctor_Rectangle_
+  commentId: M:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.#ctor(Rectangle)
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.QuestShrineBase(Rectangle)
+  nameWithType: QuestShrineBase.QuestShrineBase(Rectangle)
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.#ctor*
+  name: QuestShrineBase
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html#WarcraftLegacies_Source_Quests_Druids_QuestShrineBase__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.QuestShrineBase
+  nameWithType: QuestShrineBase.QuestShrineBase
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html#WarcraftLegacies_Source_Quests_Druids_QuestShrineBase_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestShrineBase.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html#WarcraftLegacies_Source_Quests_Druids_QuestShrineBase_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnComplete
+  nameWithType: QuestShrineBase.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnFail(MacroTools.FactionSystem.Faction)
+  name: OnFail(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html#WarcraftLegacies_Source_Quests_Druids_QuestShrineBase_OnFail_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnFail(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnFail(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestShrineBase.OnFail(Faction)
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnFail*
+  name: OnFail
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html#WarcraftLegacies_Source_Quests_Druids_QuestShrineBase_OnFail_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnFail
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.OnFail
+  nameWithType: QuestShrineBase.OnFail
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html#WarcraftLegacies_Source_Quests_Druids_QuestShrineBase_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardDescription
+  nameWithType: QuestShrineBase.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html#WarcraftLegacies_Source_Quests_Druids_QuestShrineBase_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardDescription
+  nameWithType: QuestShrineBase.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html#WarcraftLegacies_Source_Quests_Druids_QuestShrineBase_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardFlavour
+  nameWithType: QuestShrineBase.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.html#WarcraftLegacies_Source_Quests_Druids_QuestShrineBase_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestShrineBase.RewardFlavour
+  nameWithType: QuestShrineBase.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.Druids.QuestTortolla
   name: QuestTortolla
   href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestTortolla.html
